Added run flag, batch mode and  now tracks successfully processed records.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
   "source": "/mnt/data/publication/public/",
   "peppermintUrl": "http://localhost:8080/peppermint/dataset",
-  "apiKey": "Vj$BE4p9*A%6LCfUyM3u1X8guXG7*j"
+  "apiKey": "Vj$BE4p9*A%6LCfUyM3u1X8guXG7*j",
+  "maxRecordsPerRequest": 20,
+  "trackingDir": "/opt/peppermint-runner/tracking",
+  "runFlag": "/opt/peppermint-runner/tracking/run.flag"
 }
